<resources>
    <string name="app_name">restaurante-alfredito</string>


    <string name="title_activity_cliente_menu">ClienteMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesion</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_administrador_menu">AdministradorMenuActivity</string>
    <string name="title_activity_motorizado">MotorizadoActivity</string>


    <string name="nombre">Nombre Completo</string>
    <string name="apellido">Apellido completo</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Direccion">Direccion de domicilio</string>
    <string name="registro">Registrese</string>
    <string name="Terminos">Terminos y Condiciones</string>
    <string name="Datos_Personales">Datos Personales</string>
    <string name="title_activity_actiivty_google_map">actiivty_Google_Map</string>

    <string name="google_key">AIzaSyDqSqTa1EVXo_jyQgmkGm82cOYlb2A8i_U</string>

    <string-array name="Cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>